src/test/deca/context/valid/simple-declare-field.deca
// Description:
//    Déclare un attribut int
//
// Resultats:
//    //
//
// Historique:
//    cree le 13/01/2023

class A{
    int x;
}
